# nozomi

./: Cargo.toml  Justfile  README.md  TODO.md  test.lua
src/: lib.rs  pipes.rs
src/nozomi/: mod.rs
src/nozomi/lua/: global_env.rs  mod.rs
src/nozomi/lua/sdk/: mod.rs
src/nozomi/lua/sdk/memory/: mod.rs
src/nozomi/lua/util/: mod.rs
src/nozomi/offsets/: entity.rs
src/nozomi/structs/: localplayer.rs  mod.rs  player.rs  vector.rs
